--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ ul.task-list li input[type="checkbox"] {
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container">
     <a href="./index.html" class="navbar-brand navbar-brand-logo">
-    <img src="./_static/QGIS-TIM-logo.svg" alt="" class="navbar-logo">
+    <img src="./_static/QGIS-Tim-logo.svg" alt="" class="navbar-logo">
     </a>
     <a class="navbar-brand" href="./index.html">
     <span class="navbar-title">QGIS-Tim</span>
@@ -87,7 +87,7 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Installation</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./tutorial-QGIS-TIM.html">
+    <a class="nav-link" href="./tutorial-QGIS-Tim.html">
  <span class="menu-text">Tutorials</span></a>
   </li>  
 </ul>
