--- a/install.html
+++ b/install.html
@@ -156,7 +156,7 @@ ul.task-list li input[type="checkbox"] {
 <p><code>gistim</code> requires a seperate Python environment, because it depends on packages incompatible with the packages in QGIS’ own Python environment. There are two approaches: either using the fully-fletched Deltaforge distribution (Recommended) or the leaner Miniforge distribution.</p>
 <section id="method-1-with-deltaforge-recommended" class="level3">
 <h3 class="anchored" data-anchor-id="method-1-with-deltaforge-recommended">Method 1: with Deltaforge (Recommended)</h3>
-<p><a href="https://deltares.thegood.cloud/s/ww84QA9qq5ymRMS">Download and install Deltaforge</a>. <strong>Make sure you use Deltaforge version 3.0 or higher!</strong></p>
+<p><a href="https://deltares.thegood.cloud/s/AefTz97ZHbWS4RT">Download and install Deltaforge</a>. <strong>Make sure you use Deltaforge version 3.0 or higher!</strong></p>
 <ol type="1">
 <li>Open the Deltaforge prompt (search in Windows Start for "Deltaforge Prompt").</li>
 <li>Configure the gistim installation, so that the QGIS plugin is able to find it. Run: <code>python -m gistim configure</code></li>
