--- a/tutorial-QGIS-Tim.html
+++ b/tutorial-QGIS-Tim.html
@@ -158,11 +158,11 @@ ul.task-list li input[type="checkbox"] {
 <section id="requirements" class="level2">
 <h2 class="anchored" data-anchor-id="requirements">Requirements</h2>
 <ul>
-<li>Be sure QGIS 3.22.00 or higher is installed.</li>
+<li>Be sure QGIS version 3.22.00 or higher is installed.</li>
 <li>Be sure the <code>gistim</code> Python package is installed (see <a href="./install.html">installation</a> for instructions).</li>
-<li>Download the tutorial material <a href="https://deltares.thegood.cloud/s/zryWnfjT43Ryoea">Follow this link.</a></li>
-<li>Installation of the QGIS-Tim and iMOD plugin is part of this Tutorial and the necessary ZIP files are included in the tutorial material.</li>
-<li>Internet connections is optional for the Tutorial and only required for installation of additional plugins and the use of an online topographic background map.</li>
+<li>Download the tutorial material. <a href="https://deltares.thegood.cloud/s/zryWnfjT43Ryoea">Follow this link.</a></li>
+<li>Installation of the QGIS-Tim plugin and ithe MOD plugin is part of this Tutorial and the necessary ZIP files are included in the tutorial material.</li>
+<li>Internet connections is optional during this Tutorial. It is only required for installation of additional plugins and the use of an online topographic background map.</li>
 </ul>
 </section>
 <section id="description" class="level2">
