--- a/tutorial-QGIS-Tim.html
+++ b/tutorial-QGIS-Tim.html
@@ -195,7 +195,6 @@ ul.task-list li input[type="checkbox"] {
 <ol class="example" type="1">
 <li>Launch QGIS from your START menu, your desktop or click on …\QGIS3.28.0\bin\qgis-bin.exe.</li>
 </ol>
-<hr>
 <blockquote class="blockquote">
 <p><strong>Intermezzo:</strong> <em>QGIS language settings</em></p>
 <p>Perhaps your QGIS was installed in another language than English. Because the Tutorial refers to the English version, let’s change to English.</p>
@@ -207,7 +206,6 @@ ul.task-list li input[type="checkbox"] {
 <li>Close QGIS and open it again to activate your language change.</li>
 </ol>
 </blockquote>
-<hr>
 <p>We start with the creation of a new QGIS project.</p>
 <ol start="2" class="example" type="1">
 <li>From the main menu click on <em>Project</em> and select <em>New</em>.</li>
@@ -326,7 +324,6 @@ ul.task-list li input[type="checkbox"] {
 <li>Check in the <em>Layers</em> panel on the left that your new geopackage is added as a group. <br> A sub group <strong>timml</strong> for the steady state model input, the sub group <strong>ttim</strong> for the transient model input and a series of output formats (vector/mesh/raster).</li>
 </ol>
 <p>If you had no introduction to the Tim plugin, read the Intermezzo below for a general explanation of the components.</p>
-<hr>
 <blockquote class="blockquote">
 <p><strong>Intermezzo:</strong> <em>introduction Tabs on the Tim panel</em></p>
 <ol type="a">
@@ -336,7 +333,6 @@ ul.task-list li input[type="checkbox"] {
 <li>Extract: open an existing 3d geohydrological model (NC file) and extract the data for your project area.</li>
 </ol>
 </blockquote>
-<hr>
 <p>Now we are ready to define our first steady state model by parameterizing our Aquifer. <br></p>
 </section>
 <section id="model-1-single-aquifer" class="level2">
@@ -427,10 +423,10 @@ ul.task-list li input[type="checkbox"] {
 </ol>
 <p>The calculation result is now visible and we see a raster with just the value 0, not a very exciting result because no other elements are present yet. Let’s now add a well element.</p>
 <blockquote class="blockquote">
-<p><strong>Intermezzo:</strong> <em>Mesh and Raster explained</em></p>
+<p><strong>Intermezzo:</strong> <em>Mesh and Raster format explained</em></p>
 <ul>
-<li>Raster: is made up of pixels (also referred to as grid cells). They are usually regularly spaced and square but they don’t have to be. Preferred format to create cross sections or evaluate values at your mouse location.</li>
-<li>Mesh: an unstructured grid usually with temporal and other components. Preferred format to animate temporal data and to perform calculations.</li>
+<li>Mesh: an unstructured grid usually with temporal and other components. Preferred format in QGIS-Tim to animate temporal data, to create cross sections or evaluate values at your mouse position.</li>
+<li>Raster: is made up of pixels (also referred to as grid cells). They are regularly spaced and square. Preferred format in QGIS-Tim to perform calculations with the <em>Raster Calculator</em> tool.</li>
 </ul>
 </blockquote>
 </section>
@@ -741,7 +737,7 @@ ul.task-list li input[type="checkbox"] {
 <li>Click the button <em>Set path as …</em> and change the name of the output, e.g.&nbsp;“case-Rijsenhout-NoLake”.</li>
 <li>Click <em>Compute</em> to run the model without the Lake.</li>
 </ol>
-<p>The new results are added as new layer to the project. Check for instance sub-group “raster” under the group “case-Rijsenhout output”. Now we use QGIS to calculate the head difference for layer 0.</p>
+<p>The new results are added as new layer to the project. Check for instance sub-group “raster” under the group “case-Rijsenhout output”. Now we use QGIS to calculate the head difference for layer 0. For raster calculations we prefer <em>Raster Calculator</em> over the <em>Mesh Calculator</em> in QGIS.</p>
 <ol start="142" class="example" type="1">
 <li>From the QGIS main menu <em>Raster</em> select the tool <em>Raster Calculator</em> and the tool window opens.</li>
 <li>In the section <em>Raster Calculator Expression</em> you can create an expression using the elements from <em>Raster Bands</em> and <em>Operators</em>. Create this expression: “case-Rijsenhout-head_layer_001 - case-Rijsenhout-NoLake-head_layer_001”.</li>
