deploy: 7fb6da8e77124681af0ac6fe29c67374d602d55f

--- a/install.html
+++ b/install.html
@@ -122,8 +122,8 @@ ul.task-list li input[type="checkbox"] {
   </ul></li>
   <li><a href="#install-the-qgis-plugin" id="toc-install-the-qgis-plugin" class="nav-link" data-scroll-target="#install-the-qgis-plugin">3. Install the QGIS plugin</a>
   <ul class="collapse">
-  <li><a href="#from-the-plugin-database" id="toc-from-the-plugin-database" class="nav-link" data-scroll-target="#from-the-plugin-database">From the plugin database</a></li>
-  <li><a href="#from-zip" id="toc-from-zip" class="nav-link" data-scroll-target="#from-zip">From Zip</a></li>
+  <li><a href="#method-1-from-the-gqis-plugin-database" id="toc-method-1-from-the-gqis-plugin-database" class="nav-link" data-scroll-target="#method-1-from-the-gqis-plugin-database">Method 1: From the GQIS plugin database</a></li>
+  <li><a href="#method-2-from-zip-prefered" id="toc-method-2-from-zip-prefered" class="nav-link" data-scroll-target="#method-2-from-zip-prefered">method 2: From Zip (prefered)</a></li>
   </ul></li>
   </ul>
 </nav>
@@ -178,15 +178,14 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="install-the-qgis-plugin" class="level2">
 <h2 class="anchored" data-anchor-id="install-the-qgis-plugin">3. Install the QGIS plugin</h2>
-<p>Install the QGIS plugin now.</p>
-<section id="from-the-plugin-database" class="level3">
-<h3 class="anchored" data-anchor-id="from-the-plugin-database">From the plugin database</h3>
-<p>–Explanation how to install from the plugin database comes here here when we released version &gt;4.1 on the plugin database–</p>
+<section id="method-1-from-the-gqis-plugin-database" class="level3">
+<h3 class="anchored" data-anchor-id="method-1-from-the-gqis-plugin-database">Method 1: From the GQIS plugin database</h3>
+<p><strong>NB</strong> Due to ongoing developments new features and bug fixes might not be part of this release. Consider installation method 2. 1. Open QGIS. 3. At the top, find the Plugins menu (~sixth object in the menubar). 4. Find "Manage and Install plugins" (first object in drop-down). 5. Find "All" (First in list). 6. Search for <code>Qgis-Tim</code>. 7. Click "Install Plugin".</p>
 </section>
-<section id="from-zip" class="level3">
-<h3 class="anchored" data-anchor-id="from-zip">From Zip</h3>
-<p>The qgistim.zip should not be unzipped manually, QGIS will do so.</p>
+<section id="method-2-from-zip-prefered" class="level3">
+<h3 class="anchored" data-anchor-id="method-2-from-zip-prefered">method 2: From Zip (prefered)</h3>
 <ol type="1">
+<li>Download the QGIS-TIM-plugin.zip (do not unzip!) from the <a href="https://deltares.thegood.cloud/s/AefTz97ZHbWS4RT" target="_blank">iMOD-Suite download portal.</a></li>
 <li>Open QGIS.</li>
 <li>At the top, find the Plugins menu (~sixth object in the menubar).</li>
 <li>Find "Manage and Install plugins" (first object in drop-down).</li>
