deploy: 35b64cc4e9239ca4f78f53c91314e539e4b80258

--- a/install.html
+++ b/install.html
@@ -180,16 +180,24 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="install-the-qgis-plugin">3. Install the QGIS plugin</h2>
 <section id="method-1-from-the-gqis-plugin-database" class="level3">
 <h3 class="anchored" data-anchor-id="method-1-from-the-gqis-plugin-database">Method 1: From the GQIS plugin database</h3>
-<p><strong>NB</strong> Due to ongoing developments new features and bug fixes might not be part of this release. Consider installation method 2. 1. Open QGIS. 3. At the top, find the Plugins menu (~sixth object in the menubar). 4. Find "Manage and Install plugins" (first object in drop-down). 5. Find "All" (First in list). 6. Search for <code>Qgis-Tim</code>. 7. Click "Install Plugin".</p>
+<p><strong>NB</strong> Due to ongoing developments new features and bug fixes might not be part of this release. Consider installation method 2.</p>
+<ol type="1">
+<li>Open QGIS.</li>
+<li>At the top, find the Plugins menu (~sixth object in the menubar).</li>
+<li>Find "Manage and Install plugins" (first object in drop-down).</li>
+<li>Find "All" (first in left section).</li>
+<li>Search for "Qgis-Tim".</li>
+<li>Click "Install Plugin".</li>
+</ol>
 </section>
 <section id="method-2-from-zip-prefered" class="level3">
 <h3 class="anchored" data-anchor-id="method-2-from-zip-prefered">method 2: From Zip (prefered)</h3>
 <ol type="1">
-<li>Download the QGIS-TIM-plugin.zip (do not unzip!) from the <a href="https://deltares.thegood.cloud/s/AefTz97ZHbWS4RT" target="_blank">iMOD-Suite download portal.</a></li>
+<li>Download the <strong>"QGIS-TIM-plugin.zip"</strong> (do not unzip!) from the <a href="https://deltares.thegood.cloud/s/AefTz97ZHbWS4RT" target="_blank">iMOD-Suite download portal.</a></li>
 <li>Open QGIS.</li>
 <li>At the top, find the Plugins menu (~sixth object in the menubar).</li>
 <li>Find "Manage and Install plugins" (first object in drop-down).</li>
-<li>Find "Install from ZIP" (Sixth in list).</li>
+<li>Find "Install from ZIP" (fourth in left section).</li>
 <li>Enter the path to the qgistim.zip file.</li>
 <li>Click "Install Plugin".</li>
 </ol>
