--- a/install.html
+++ b/install.html
@@ -123,7 +123,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#install-the-qgis-plugin" id="toc-install-the-qgis-plugin" class="nav-link" data-scroll-target="#install-the-qgis-plugin">3. Install the QGIS plugin</a>
   <ul class="collapse">
   <li><a href="#method-1-from-the-gqis-plugin-database" id="toc-method-1-from-the-gqis-plugin-database" class="nav-link" data-scroll-target="#method-1-from-the-gqis-plugin-database">Method 1: From the GQIS plugin database</a></li>
-  <li><a href="#method-2-from-zip-prefered" id="toc-method-2-from-zip-prefered" class="nav-link" data-scroll-target="#method-2-from-zip-prefered">method 2: From Zip (prefered)</a></li>
+  <li><a href="#method-2-from-zip-prefered" id="toc-method-2-from-zip-prefered" class="nav-link" data-scroll-target="#method-2-from-zip-prefered">Method 2: From Zip (prefered)</a></li>
   </ul></li>
   </ul>
 </nav>
@@ -184,21 +184,21 @@ ul.task-list li input[type="checkbox"] {
 <ol type="1">
 <li>Open QGIS.</li>
 <li>At the top, find the Plugins menu (~sixth object in the menubar).</li>
-<li>Find "Manage and Install plugins" (first object in drop-down).</li>
-<li>Find "All" (first in left section).</li>
+<li>Find "Manage and Install plugins" (~first object in drop-down).</li>
+<li>Find "All" (~first in left section).</li>
 <li>Search for "Qgis-Tim".</li>
 <li>Click "Install Plugin".</li>
 </ol>
 </section>
 <section id="method-2-from-zip-prefered" class="level3">
-<h3 class="anchored" data-anchor-id="method-2-from-zip-prefered">method 2: From Zip (prefered)</h3>
+<h3 class="anchored" data-anchor-id="method-2-from-zip-prefered">Method 2: From Zip (prefered)</h3>
 <ol type="1">
-<li>Download the <strong>"QGIS-TIM-plugin.zip"</strong> (do not unzip!) from the <a href="https://deltares.thegood.cloud/s/AefTz97ZHbWS4RT" target="_blank">iMOD-Suite download portal.</a></li>
+<li>Download the "QGIS-TIM-plugin.zip" (do not unzip!) from the <a href="https://deltares.thegood.cloud/s/AefTz97ZHbWS4RT" target="_blank">iMOD-Suite download portal.</a></li>
 <li>Open QGIS.</li>
 <li>At the top, find the Plugins menu (~sixth object in the menubar).</li>
-<li>Find "Manage and Install plugins" (first object in drop-down).</li>
-<li>Find "Install from ZIP" (fourth in left section).</li>
-<li>Enter the path to the qgistim.zip file.</li>
+<li>Find "Manage and Install plugins" (~first object in drop-down).</li>
+<li>Find "Install from ZIP" (~fourth in left section).</li>
+<li>Enter the path to the file "QGIS-TIM-plugin.zip".</li>
 <li>Click "Install Plugin".</li>
 </ol>
 <p>This will add an icon to the toolbar(s). By clicking the icon, the plugin is started. The QGIS plugin will automatically start and external interpreter when it is required.</p>
