deploy: adee375f1d494b65dfd01c6bf31855d5ba41fde2

--- a/install.html
+++ b/install.html
@@ -159,7 +159,7 @@ ul.task-list li input[type="checkbox"] {
 <p><code>gistim</code> requires a seperate Python environment, because it depends on packages incompatible with the packages in QGIS’ own Python environment. There are two approaches: either using the fully-fletched Deltaforge distribution (Recommended) or the leaner Miniforge distribution.</p>
 <section id="method-1-with-deltaforge-recommended" class="level3">
 <h3 class="anchored" data-anchor-id="method-1-with-deltaforge-recommended">Method 1: with Deltaforge (recommended)</h3>
-<p><a href="https://download2.deltares.nl/imod-suite/" target="_blank">Download and install Deltaforge</a>. <strong>Make sure you use Deltaforge version 0.3.0 or higher!</strong></p>
+<p><a href="https://download.deltares.nl/imod-suite/" target="_blank">Download and install Deltaforge</a>. <strong>Make sure you use Deltaforge version 0.3.0 or higher!</strong></p>
 <ol type="1">
 <li>Open the Deltaforge prompt (search in Windows Start for "Deltaforge Prompt").</li>
 <li>Configure the gistim installation, so that the QGIS plugin is able to find it. Run: <code>python -m gistim configure</code></li>
